# simple-upgrade

./: .gitignore  =1.3.0  DEVELOPER_GUIDE.md  README.md  USAGE.md  pyproject.toml  test_live.py  test_v3_minimal.py
.github/workflows/: ci.yaml  release.yaml
docs/architecture/: confluence_design.md
examples/: upgrade_request_example.py
output/post_check_hkd-swi-cat9k-01_20260402_104605/: show_file_systems.txt  show_version.txt
output/post_check_hkd-swi-cat9k-01_20260402_105402/: show_environment.txt  show_ip_bgp_summary.txt  show_version.txt
output/post_check_hkd-swi-cat9k-01_20260402_110531/: show_cdp_neighbors.txt  show_interface_description.txt  show_interfaces_status.txt  show_ip_interface_brief.txt  show_ip_route_summary.txt  show_logging.txt  show_version.txt
output/pre_check_hkd-swi-cat9k-01_20260402_103928/: show_run.txt  show_version.txt
output/pre_check_hkd-swi-cat9k-01_20260402_104720/: show_logging.txt  show_processes_cpu.txt  show_version.txt
output/pre_check_hkd-swi-cat9k-01_20260402_105459/: show_logging.txt  show_processes_cpu.txt  show_version.txt
output/pre_check_hkd-swi-cat9k-01_20260402_111036/: show_inventory.txt  show_logging.txt  show_mac_address_table.txt  show_processes_cpu.txt  show_version.txt
src/simple_upgrade/: __init__.py  base.py  checks.py  cli.py  config_validator.py  connection_manager.py  constants.py  device.py  example.py  genie_tests.py  logger.py  mocks.py  models.py  parsers.py  registry.py  report.py  sync.py  upgrade_package.py  workflow.py
src/simple_upgrade/device_profiles/: __init__.py
src/simple_upgrade/device_profiles/arista/: 7050.json  7100.json  7250.json  7500.json
src/simple_upgrade/device_profiles/cisco/: c9300.json  c9400.json  c9500.json  catalyst_3650.json  catalyst_3850.json  catalyst_9200.json  catalyst_9200xl.json  catalyst_9300.json  catalyst_9300x.json  n9k.json  (+1 more)
src/simple_upgrade/manufacturers/: __init__.py
tests/: __init__.py  conftest.py  test_checks.py  test_connection_manager.py  test_device.py  test_device_profiles.py  test_genie_tests.py  test_report.py  test_sync.py  test_with_pytest.py  test_with_unittest.py
(+26 files in other folders)
