[project]
name = "simple-upgrade"
version = "0.1.0"
description = "A simple Python package for network device firmware upgrades supporting Cisco, Juniper, Arista, and Palo Alto."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapli[textfsm,ssh2]>=2026.2.20",
    "netmiko>=4.6.0",
    "pyats>=26.2",
    "genie>=26.2",
    "rich>=14.3.3",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
