[project]
name = "simple-upgrade"
version = "1.0.0"
description = "A modular, profile-driven Python orchestrator for network device firmware upgrades. Currently supports Cisco IOS-XE."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarani Debnath", email = "tarani.debnath@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "scrapli[textfsm,ssh2]>=2026.2.20",
    "pyats>=26.2",
    "genie>=26.2",
    "rich>=14.3.3",
    "pyyaml>=6.0.3",
    "netutils>=1.3.0",
    "pydantic>=2.12.5",
    "ssh2-python>=1.2.0.post1",
    "ipdb>=0.13.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/tkdebnath/simple-upgrade"
Repository = "https://github.com/tkdebnath/simple-upgrade.git"
"Bug Tracker" = "https://github.com/tkdebnath/simple-upgrade/issues"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
